[tool.poetry]
name = "specter_task"
version = "0.1.0"
description = ""
authors = ["ps"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"
pydantic = "^1.8.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
ipykernel = "^6.5.0"
fastjsonschema = "^2.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
